--- a/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Plugin Template" />
+                android:text="WildfireDLN Plugin" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
