--- a/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
@@ -13,13 +13,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="WildfireDLN Plugin" />
+                android:text="@string/app_name" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
