--- a/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
@@ -26,6 +26,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Refresh" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
