Updated wildfire-dln code with the latest files

--- a/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
@@ -45,15 +45,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fadeScrollbars="false"
+        android:layout_height="match_parent"
         android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp">
+        android:layout_marginRight="3dp"
+        android:fadeScrollbars="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
 
             <TableLayout
@@ -64,22 +64,25 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="3dip"
-                        android:text="header0"/>
+                        android:text="header0" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="3dip"
-                        android:text="header1"/>
+                        android:text="header1" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="3dip"
-                        android:text="header2"/>
+                        android:text="header2" />
 
                 </TableRow>
 
@@ -99,8 +102,7 @@
             <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
