--- a/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
+++ b/ATAK/plugins-civ/plugins/wildfire-dln/res/layout/plugin_template_layout.xml
@@ -38,6 +38,12 @@
             android:visibility="invisible"
             />
 
+        <CheckBox
+            android:id="@+id/autoBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Auto-Download" />
 
 
     </LinearLayout>
